# ops-pilot

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG-v2.0.md  CHANGELOG.en.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  PLAN-v2.0.md  README.md  REVIEW_REPORT.md  SECURITY.md  _i18n_check.py  _i18n_keys.py  commit-msg.txt  docker-compose.ghcr.yml  docker-compose.yml  mimo.json  nginx.conf  opencode.json  spa_server.py
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/core/: Cargo.toml
backend/core/migrations/: 20260721000002_cmdb.sql  20260721000003_cicd.sql
backend/core/src/: alert.rs  vault.rs
backend/core/src/auth/: mod.rs
backend/core/src/monitor/: mod.rs
backend/core/src/ssh/: executor.rs
backend/gateway/: Cargo.toml
backend/gateway/src/: alert_advisor.rs  alert_suppression.rs  anomaly_detector.rs  audit_log.rs  backup.rs  cluster_manager.rs  dashboard_store.rs  docs.rs  gitops.rs  lib.rs  main.rs  metrics.rs  notify.rs  oauth2.rs  otel_integration.rs  rca_engine.rs  report_generator.rs  retry_queue.rs  security_headers.rs  seed.rs  session_recorder.rs  ws_events.rs
backend/gateway/src/llm/: mod.rs
backend/gateway/src/middleware/: mod.rs
backend/gateway/src/routes/: agent.rs  alert.rs  anomaly_routes.rs  apm.rs  audit.rs  audit_log_routes.rs  auth.rs  backup.rs  change_analysis.rs  chaos.rs  cicd.rs  cluster_routes.rs  cmdb.rs  compliance.rs  dashboard_routes.rs  escalation.rs  fim.rs  finops.rs  gitops_routes.rs  health.rs  incidents.rs  jobs.rs  knowledge.rs  mod.rs  oncall.rs  otel_routes.rs  predictions.rs  rca_routes.rs  remediation.rs  report_routes.rs  reports.rs  roles.rs  runbook.rs  search.rs  secrets_scan.rs  session_routes.rs  slos.rs  soar.rs  threats.rs  users.rs  (+2 more)
backend/gateway/tests/: alert_tests.rs  auth_tests.rs  backup_tests.rs  e2e.rs  health_tests.rs  host_tests.rs  search_tests.rs
backend/modules/mod-advisor/: Cargo.toml
backend/modules/mod-advisor/src/: lib.rs
backend/modules/mod-alert-escalation/src/: classifier.rs  correlation.rs  lib.rs  policy.rs  schedule.rs
backend/modules/mod-baseline/src/: checks.rs  lib.rs  prediction.rs
backend/modules/mod-change-risk/: Cargo.toml
backend/modules/mod-change-risk/src/: engine.rs  lib.rs
backend/modules/mod-config/src/: lib.rs
backend/modules/mod-container-sec/: Cargo.toml
backend/modules/mod-container-sec/src/: image_scanner.rs  lib.rs  runtime_checker.rs
backend/modules/mod-core/: Cargo.toml
backend/modules/mod-core/src/: host.rs  lib.rs  ssh.rs
backend/modules/mod-filesync/: Cargo.toml
backend/modules/mod-filesync/src/: lib.rs
backend/modules/mod-fim/: Cargo.toml
backend/modules/mod-fim/src/: lib.rs  storage.rs
backend/modules/mod-ids/: Cargo.toml
backend/modules/mod-ids/src/: analyzer.rs  anomaly.rs  blocklist.rs  geo.rs  lib.rs
backend/modules/mod-inspection/: Cargo.toml
backend/modules/mod-inspection/src/: engine.rs  lib.rs
backend/modules/mod-knowledge/src/: lib.rs  search.rs
backend/modules/mod-monitor/: Cargo.toml
backend/modules/mod-monitor/src/: collector.rs  lib.rs  storage.rs
backend/modules/mod-rca/src/: lib.rs  llm.rs  llm_analyzer.rs  rules.rs
backend/modules/mod-runbook/: Cargo.toml
backend/modules/mod-runbook/src/: executor.rs  lib.rs  plans.rs
backend/modules/mod-scheduler/: Cargo.toml
backend/modules/mod-scheduler/src/: lib.rs
backend/modules/mod-security/src/: engine.rs  llm_scanner.rs
backend/modules/mod-topo/src/: discovery.rs  graph.rs  lib.rs  scanner.rs
backend/modules/mod-webhook/: Cargo.toml
backend/modules/mod-webhook/src/: dingtalk.rs  email.rs  lib.rs  wecom.rs
backend/sdk/src/: context.rs  events.rs  llm.rs
backend/src/core/migrations/: 20260715000002_audit_trail.sql  20260715000003_hosts.sql  20260721000001_user_roles.sql
backend/src/core/src/: alert.rs  crypto.rs  lib.rs
backend/src/core/src/auth/: mod.rs
backend/src/core/src/db/: mod.rs
backend/src/core/src/docker/: mod.rs
backend/src/core/src/host/: mod.rs
backend/src/core/src/ssh/: mod.rs
backend/src/gateway/: Cargo.toml
backend/src/gateway/src/: agent.rs  lib.rs  main.rs  terminal.rs
backend/src/gateway/src/llm/: chat.rs  provider.rs
backend/src/gateway/src/middleware/: mod.rs  rate_limit.rs
backend/src/gateway/src/routes/: agent.rs  alert.rs  audit.rs  baseline.rs  change_analysis.rs  cmdb.rs  compliance.rs  diagnostics.rs  mod.rs  (+16 more)
backend/src/modules/mod-alert-escalation/: Cargo.toml
backend/src/modules/mod-baseline/: Cargo.toml
backend/src/modules/mod-config/: Cargo.toml
backend/src/modules/mod-knowledge/: Cargo.toml
backend/src/modules/mod-topo/: Cargo.toml
backend/src/modules/mod-webhook/: Cargo.toml
backend/src/sdk/src/: error.rs  lib.rs  loader.rs  traits.rs
src/core/: Cargo.toml
src/core/migrations/: 20260715000001_initial.sql  20260716000001_users.sql  20260718000001_host_credentials.sql  20260718000002_agent_sessions.sql  20260719000001_hosts_owner.sql  20260719000002_vault_keys.sql
src/core/src/: alert.rs  audit.rs  crypto.rs  event.rs  lib.rs  vault.rs
src/core/src/auth/: mod.rs
src/core/src/db/: mod.rs
src/core/src/docker/: mod.rs
src/core/src/host/: mod.rs
src/core/src/monitor/: mod.rs
src/core/src/ssh/: executor.rs  mod.rs
src/gateway/: Cargo.toml
src/gateway/src/: agent.rs  lib.rs  main.rs  terminal.rs
src/gateway/src/llm/: chat.rs  mod.rs  provider.rs
src/gateway/src/middleware/: mod.rs  rate_limit.rs
src/gateway/src/routes/: agent.rs  hosts.rs  mod.rs  modules.rs  security.rs  vault.rs
src/gateway/src/tools/: mod.rs  registry.rs
src/modules/mod-core/: Cargo.toml
src/modules/mod-core/src/: docker.rs  host.rs  lib.rs  monitor.rs  ssh.rs
src/modules/mod-rca/: Cargo.toml
src/modules/mod-rca/src/: analyzer.rs  lib.rs  llm_analyzer.rs
src/modules/mod-security/: Cargo.toml
src/modules/mod-security/src/: engine.rs  lib.rs  llm_scanner.rs  rules.rs
src/sdk/: Cargo.toml
src/sdk/src/: events.rs  lib.rs  llm.rs  loader.rs  traits.rs
(+238 files in other folders)
