[workspace]
members = [
    "core",
    "gateway",
    "sdk",
    "modules/mod-core",
    "modules/mod-config",
    "modules/mod-rca",
    # "modules/mod-finops",
    "modules/mod-security",
    "modules/mod-webhook",
    "modules/mod-scheduler",
    "modules/mod-filesync",
    "modules/mod-advisor",
    "modules/mod-topo",
    # "modules/mod-chatops",
    "modules/mod-monitor",
    "modules/mod-alert-escalation",
    "modules/mod-fim",
    "modules/mod-baseline",
    "modules/mod-runbook",
    "modules/mod-knowledge",
    "modules/mod-change-risk",
    "modules/mod-inspection",
    "modules/mod-ids",
    "modules/mod-container-sec",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/shengqiangdd/ops-pilot"
description = "AI-Powered Modular Infrastructure Operations Platform"
authors = ["OpsPilot Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws", "json", "macros", "tokio"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# SSH
russh = "0.62"
russh-sftp = "2.3"

# Concurrent maps
dashmap = "6"

# Database
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "json",
] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Docker
bollard = "0.19"

# Config
config = "0.14"

# Crypto
argon2 = "0.5"
jsonwebtoken = "9"
aes-gcm = "0.10"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Rate limiting
governor = "0.8"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Base64 encoding
base64 = "0.22"

# Terminal
portable-pty = "0.8"

# OpenTelemetry
opentelemetry = "0.32"
opentelemetry-otlp = "0.32"

# Async streams
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
