[package]
name = "ops-pilot-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Gateway: LLM provider abstraction, agent orchestration, tool registry"

[[bin]]
name = "ops-pilot"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde_yaml = "0.9"

prometheus = { version = "0.13", features = ["process"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream.workspace = true
russh.workspace = true
governor.workspace = true

ops-pilot-core = { path = "../core" }
ops-pilot-sdk = { path = "../sdk" }
ops-pilot-mod-core = { path = "../modules/mod-core" }
ops-pilot-mod-rca = { path = "../modules/mod-rca" }
ops-pilot-mod-security = { path = "../modules/mod-security" }
ops-pilot-mod-config = { path = "../modules/mod-config" }
ops-pilot-mod-webhook = { path = "../modules/mod-webhook" }
ops-pilot-mod-scheduler = { path = "../modules/mod-scheduler" }
ops-pilot-mod-filesync = { path = "../modules/mod-filesync" }
ops-pilot-mod-advisor = { path = "../modules/mod-advisor" }
ops-pilot-mod-topo = { path = "../modules/mod-topo" }
ops-pilot-mod-monitor = { path = "../modules/mod-monitor" }
ops-pilot-mod-alert-escalation = { path = "../modules/mod-alert-escalation" }
ops-pilot-mod-fim = { path = "../modules/mod-fim" }
ops-pilot-mod-baseline = { path = "../modules/mod-baseline" }
ops-pilot-mod-runbook = { path = "../modules/mod-runbook" }
ops-pilot-mod-knowledge = { path = "../modules/mod-knowledge" }

[dev-dependencies]
wiremock = "0.6"

[lints]
workspace = true
