[package]
name = "ops-pilot-mod-filesync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File distribution module — push, pull, stat, and backup files via SSH"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true

[dev-dependencies]
sqlx.workspace = true

[lints]
workspace = true
