[package]
name = "ops-pilot-mod-fim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File Integrity Monitoring — track file hash changes, detect tampering, alert on drift"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true
sha2 = "0.10"
base64.workspace = true

[dev-dependencies]

[lints]
workspace = true
