[package]
name = "ops-pilot-mod-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cron-style job scheduler — periodic task execution and management"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
chrono.workspace = true

[lints]
workspace = true
