[package]
name = "ops-pilot-mod-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Webhook notification module — DingTalk, WeCom, Email, custom webhooks"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util = "0.3"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
sqlx.workspace = true

[lints]
workspace = true
