[package]
name = "ops-pilot-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Gateway: LLM provider abstraction, agent orchestration, tool registry"

[[bin]]
name = "ops-pilot"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
sqlx.workspace = true
chrono.workspace = true

futures = "0.3"
futures-util = "0.3"
tokio-stream.workspace = true
russh.workspace = true
governor.workspace = true

ops-pilot-core = { path = "../core" }
ops-pilot-sdk = { path = "../sdk" }
ops-pilot-mod-core = { path = "../modules/mod-core" }
ops-pilot-mod-rca = { path = "../modules/mod-rca" }
ops-pilot-mod-security = { path = "../modules/mod-security" }

[dev-dependencies]
wiremock = "0.6"

[lints]
workspace = true
