[package]
name = "ops-pilot-mod-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core module: SSH, Docker, host management, monitoring"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true

[lints]
workspace = true
