[package]
name = "ops-pilot-mod-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CIS compliance, vulnerability scanning, and patch management module"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
sqlx.workspace = true
futures-util = "0.3"

[lints]
workspace = true
