[package]
name = "ops-pilot-mod-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Centralized configuration management — CRUD, hot-reload, and validation"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true

[lints]
workspace = true
