[package]
name = "ops-pilot-mod-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ops knowledge base — auto-extract insights from resolved incidents, searchable via API and AI"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]

[lints]
workspace = true
