[package]
name = "ops-pilot-mod-topo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network topology discovery — SSH-based auto-discovery, dependency mapping, ReactFlow visualization"

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true
futures-util = "0.3"

[dev-dependencies]

[lints]
workspace = true
