[package]
name = "ops-pilot-mod-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Webhook notification module — dispatch events to Slack, DingTalk, Feishu, etc."

[dependencies]
ops-pilot-sdk = { path = "../../sdk" }
ops-pilot-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util = "0.3"

[dev-dependencies]
sqlx.workspace = true

[lints]
workspace = true
